--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,8 @@
     work correctly both with client-side routing and a non-root public URL.
     Learn how to configure a non-root public URL by running `npm run build`.
   -->
-  <title>Suky - Learn to Fly</title>
-  <meta name="description" content="Mint your Nerdy Coder Clone NFT"/>
+  <title>Suki Learns to Fly</title>
+  <meta name="description" content="Mint your Suki(s)"/>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
